--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -86,6 +86,24 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/fbpost/fbpostpPost-dialog.controller.js"></script>
+    <script src="app/entities/fbpost/fbpostpPost-detail.controller.js"></script>
+    <script src="app/entities/fbpost/fbpostpPost-delete-dialog.controller.js"></script>
+    <script src="app/entities/fbpost/fbpostpPost.state.js"></script>
+    <script src="app/entities/fbpost/fbpostpPost.service.js"></script>
+    <script src="app/entities/fbpost/fbpostpPost.controller.js"></script>
+    <script src="app/entities/fb-u-token/fb-u-tokenpPost-dialog.controller.js"></script>
+    <script src="app/entities/fb-u-token/fb-u-tokenpPost-detail.controller.js"></script>
+    <script src="app/entities/fb-u-token/fb-u-tokenpPost-delete-dialog.controller.js"></script>
+    <script src="app/entities/fb-u-token/fb-u-tokenpPost.state.js"></script>
+    <script src="app/entities/fb-u-token/fb-u-tokenpPost.service.js"></script>
+    <script src="app/entities/fb-u-token/fb-u-tokenpPost.controller.js"></script>
+    <script src="app/entities/fb-message/fb-messagepPost-dialog.controller.js"></script>
+    <script src="app/entities/fb-message/fb-messagepPost-detail.controller.js"></script>
+    <script src="app/entities/fb-message/fb-messagepPost-delete-dialog.controller.js"></script>
+    <script src="app/entities/fb-message/fb-messagepPost.state.js"></script>
+    <script src="app/entities/fb-message/fb-messagepPost.service.js"></script>
+    <script src="app/entities/fb-message/fb-messagepPost.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
